#  Copyright 2022 Ahmed Charles <me@ahmedcharles.com>
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "ch32v30x"
version = "0.0.1"
authors = ["Ahmed Charles <me@ahmedcharles.com>"]
description = "With svd2rust generated peripherals for WCH CH32V30x MCU's."
repository = "https://gitlab.com/ahmedcharles/ch32v30x"
readme = "README.md"
keywords = ["riscv", "register", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
rust-version = "1.59"
edition = "2021"

[badges]
gitlab = { repository = "ahmedcharles/ch32v30x" }
maintenance = { status = "experimental" }

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
riscv = "0.7.0"

[features]
rt = []

[package.metadata.docs.rs]
features = ["rt"]
